# eigo

./: README.md  eigo.py  pyproject.toml
